[project]
name = "demo-june-blue-ocean-master"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "vda5050-core-py",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "websockets>=12",
    "requests>=2.31",
    "nudged>=0.3",
    "pyyaml>=6.0",
    "rich>=13",
    "opencv-python-headless>=4.13.0.92",
    "pika>=1.3",
    "paho-mqtt>=2.1",
]

[tool.uv.sources]
vda5050-core-py = { path = "..", editable = false }
